<resources>
    <string name="app_name">TICKETAPP</string>
    <!-- Strings related to login -->
    <string name="login_title">TICKETAPP</string>
    <string name="login_button2">CANCEL</string>
    <string name="login_text1">¿Olvidaste tu cuenta?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sing in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_ticket_list">Admin</string>
    <string name="title_ticket_detail">Ticket Detail</string>
    <string name="title_userticket_list">UserTickets</string>
    <string name="title_userticket_detail">UserTicket Detail</string>
    <string name="recov_password">Reset Password</string>
    <string name="usr_pedir_ticket_descr_srv">Descripción del Servicio:</string>
    <string name="usr_pedir_ticket_hint_nombres">Nombre</string>
    <string name="usr_pedir_ticket_hint_apellidos">Apellidos</string>
    <string name="usr_pedir_ticket_direccion">Dirección</string>
    <string name="usr_pedir_ticket_hint_direccion">Calle, Número, Comuna</string>
    <string name="usr_pedir_ticket_hint_desde">Desde</string>
    <string name="usr_pedir_ticket_fecha">Fecha</string>
    <string name="usr_pedir_ticket_hint_hasta">Hasta</string>
    <string name="usr_pedir_ticket_btn_cancelar">Cancelar</string>
    <string name="usr_pedir_ticket_btn_enviar">Enviar Peticion</string>
</resources>
